# temp_workspace

./: README.md
install/: local_setup.sh  setup.sh
install/action_service_client/lib/action_service_client/: squares_action_client  squares_action_server
install/action_service_client/share/action_service_client/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/action_tutorials_interfaces/share/action_tutorials_interfaces/: local_setup.sh  package.ps1  package.sh
install/interfaces/share/interfaces/: local_setup.sh  package.sh
install/listener/lib/listener/: listener
install/listener/share/listener/: package.bash  package.dsv  package.sh
install/service/lib/service/: client
install/service/share/service/: package.bash  package.dsv  package.ps1  package.sh  package.xml
install/talker/lib/talker/: talker
install/talker/share/talker/: package.bash  package.ps1  package.sh  package.xml
log/: latest_build
readme/: NewUser.md  PubSub.md  SSH.md  SerCli.md
src/action_service_client/: package.xml  setup.cfg  setup.py
src/action_service_client/action_service_client/: action_client.py
src/action_tutorials_interfaces/: CMakeLists.txt  package.xml
src/install/: local_setup.sh  setup.sh
src/interfaces/: CMakeLists.txt
src/interfaces/srv/: GetDistance.srv
src/listener/: setup.cfg  setup.py
src/log/: latest_build
src/service/: package.xml  setup.cfg  setup.py
src/service/service/: clientmain.py  main.py
src/talker/: setup.cfg  setup.py
src/talker/talker/: main.py
src/test_interfaces1/: CMakeLists.txt
(+58 files in other folders)
